# tree-query

./: CMakeLists.txt
cmake/: tests.cmake
examples/: imports
lib/ts/: cursor.cpp  lang.cpp  node.cpp  parser.cpp  query.cpp  tree.cpp  ts.cpp  ts.h
src/: actions.h  cli.cpp  cli.h  info.cpp  list.cpp  main.cpp  map_file.cpp  map_file.h  query.cpp  registry.cpp  registry.h  tree.cpp  ts.cpp  ts.h
tests/: test_mapping.cpp  test_xyz.cpp
